--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@ngx-translate/core": "^15.0.0",
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
