--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@ngx-translate/core": "^15.0.0",
+    "compression": "^1.7.4",
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
